Whitespace and use TestUtils for rendering